--- a/styles/components/button.scss
+++ b/styles/components/button.scss
@@ -65,48 +65,34 @@
     transition: 0.15s all;
   }
 
-  &.-info {
-    &:hover {
-      background-color : $brand-blue-dk;
-    }
-  }
+  // &.-danger {
+  //   @include btn-variant($crimson);
+  // }
 
-  &.-success {
-    &:hover {
-      background-color : $brand-emerald-dk;
-    }
-  }
+  // &.-info {
+  //   @include btn-variant($aqua);
+  // }
 
-  &.-warning {
-    &:hover {
-      background-color : $brand-sun-dk;
-    }
-  }
+  // &.-success {
+  //   @include btn-variant($leaf);
+  // }
 
-  &.-danger {
-    &:hover {
-      background-color : $brand-crimson-dk;
-    }
-  }
+  // &.-warning {
+  //   @include btn-variant($sun, $black);
+  // }
 
   &.-block {
     display: block;
     width: 100%;
   }
 
-
-  &.-extra-small {
-    height: 22px;
-    padding: 0 8px;
-    line-height: 22px;
-  }
   &.-small {
-    height: 30px;
+    height: 24px;
     padding: 0 15px;
   }
 
   &.-large {
-    height: 44px;
+    height: 40px;
     padding: 0 25px;
   }
 
@@ -139,24 +125,9 @@
     margin-left: 10px;
   }
 
-}
-
-.btn-group {
-  .btn + .btn{
-    margin-right: 0px;
-    margin-left: 0px;
-  }
-  .btn {
-    border-radius: 0px;
-    border: 1px solid $brand-white;
-  }
-  .btn:first-child {
-    border-top-left-radius: $border-radius-base;
-    border-bottom-left-radius: $border-radius-base;
-  }
-  .btn:last-child {
-    border-top-right-radius: $border-radius-base;
-    border-bottom-right-radius: $border-radius-base;
-  }
-
+  // &.-bordered {
+  //   color: $gray;
+  //   background: transparent;
+  //   border: 1px solid $gray;
+  // }
 }
