--- a/styles/components/button.scss
+++ b/styles/components/button.scss
@@ -1,19 +1,21 @@
-// @mixin btn-variant($local-bg, $local-color: $white) {
-//   color: $local-color;
-//   background: $local-bg;
+@mixin btn-variant($local-bg, $local-color) {
+  color: $local-color;
+  background: $local-bg;
+  border: 1px solid $local-bg;
 
-//   &:hover {
-//     color: $local-color;
-//     background: darken($local-bg, 5%);
-//   }
+  &:hover,
+  &:focus {
+    color: $local-color;
+    background: darken($local-bg, 5%);
+  }
 
-//   &.-disabled,
-//   &:disabled,
-//   &.-disabled:hover,
-//   &:disabled:hover {
-//     background: lighten($local-bg, 20%);
-//   }
-// }
+  &.-disabled,
+  &:disabled,
+  &.-disabled:hover,
+  &:disabled:hover {
+    background: lighten($local-bg, 20%);
+  }
+}
 
 // @mixin btn-variant-bordered($local-bg, $local-color: $white) {
 //   color: $local-bg;
@@ -48,9 +50,7 @@
   line-height: 30px;
   font-size: $font-size-base;
   color: $brand-white;
-  border: 1px solid transparent;
   border-radius: $border-radius-base;
-  background: $brand-gray;
   outline: none; /* remove native outline */
   cursor: pointer;
 
@@ -59,11 +59,21 @@
 
   transition: 0.1s all;
 
-  &:hover {
+  &:hover,
+  &:focus {
     text-decoration: none !important;
-    background: $brand-gray-dk;
     transition: 0.15s all;
   }
+
+  &.-default { @include btn-variant($brand-gray, $brand-black); }
+
+  &.-sky { @include btn-variant($brand-sky, $brand-white); }
+
+  &.-emerald { @include btn-variant($brand-emerald, $brand-white); }
+
+  &.-crimson { @include btn-variant($brand-crimson, $brand-white); }
+
+  &.-sun { @include btn-variant($brand-sun, $brand-white); }
 
   // &.-danger {
   //   @include btn-variant($crimson);
