--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -25,6 +25,7 @@ $line-height-base: 1.7 !default;
 $border-radius-base: 3px;
 $border-radius-rounded: 25px;
 
+$mini: 12px;
 $tiny: 18px;
 $small: 24px;
 $medium: 32px;
