--- a/styles/components/button.scss
+++ b/styles/components/button.scss
@@ -8,34 +8,20 @@
     color: $local-color;
     background: darken($local-bg, 5%);
   }
-
-  &.-disabled,
-  &:disabled,
-  &.-disabled:hover,
-  &:disabled:hover {
-    background: $brand-gray;
-  }
 }
 
-// @mixin btn-variant-bordered($local-bg, $local-color: $white) {
-//   color: $local-bg;
-//   background: transparent;
-//   border-color: $local-bg;
+@mixin btn-variant-inverted($local-color, $local-bg: $brand-white) {
+  color: $local-color;
+  background: $local-bg;
+  border: 3px solid $local-color;
 
-//   &:hover {
-//     color: darken($local-bg, 5%);
-//     background: transparent;
-//     border-color: darken($local-bg, 5%);
-//   }
-
-//   &.-disabled,
-//   &:disabled,
-//   &.-disabled:hover,
-//   &:disabled:hover {
-//     color: lighten($local-bg, 20%);
-//     border-color: lighten($local-bg, 20%);
-//   }
-// }
+  &:hover,
+  &:focus {
+    color: $local-bg;
+    background: $local-color;
+    border: 3px solid $local-color;
+  }
+}
 
 
 .btn {
@@ -57,12 +43,6 @@
 
   transition: 0.1s all;
 
-  &:hover,
-  &:focus {
-    text-decoration: none !important;
-    transition: 0.15s all;
-  }
-
   &.-default { @include btn-variant($brand-gray, $brand-black); }
 
   &.-sky { @include btn-variant($brand-sky, $brand-white); }
@@ -72,6 +52,32 @@
   &.-crimson { @include btn-variant($brand-crimson, $brand-white); }
 
   &.-sun { @include btn-variant($brand-sun, $brand-white); }
+
+  &.-inverted {
+    &.-default { @include btn-variant-inverted($brand-gray); }
+
+    &.-sky { @include btn-variant-inverted($brand-sky); }
+
+    &.-emerald { @include btn-variant-inverted($brand-emerald); }
+
+    &.-sun { @include btn-variant-inverted($brand-sun); }
+
+    &.-crimson { @include btn-variant-inverted($brand-crimson); }
+  }
+
+  &:hover,
+  &:focus {
+    text-decoration: none !important;
+    transition: 0.15s all;
+  }
+
+  &.-disabled,
+  &:disabled,
+  &.-disabled:hover,
+  &:disabled:hover {
+    color: lighten($brand-black, 20%);
+    background: $brand-gray;
+  }
 
   &.-block {
     display: block;
