Update grid-block color to green; Add missing `.` to grid-block labels (to indicate a class).

--- a/docs/styles/layout.scss
+++ b/docs/styles/layout.scss
@@ -4,6 +4,6 @@
   line-height: 50px;
   font-size: 10px;
   text-align: center;
-  background: $brand-gray-lt;
-  border: 1px solid $brand-gray;
+  background: lighten($brand-emerald, 25%);
+  border: 1px solid $brand-emerald;
 }
