--- a/docs/styles/main.scss
+++ b/docs/styles/main.scss
@@ -2,10 +2,8 @@
 @import "nav";
 @import "swatch";
 
-.doc-bottom-space {
-  margin-bottom: 25px;
-}
+.doc-bottom-space { margin-bottom: 25px; }
 
-.doc-bottom-space-large {
-  margin-bottom: 50px;
-}
+.doc-bottom-space-large { margin-bottom: 50px; }
+
+.doc-bottom-space-small { margin-bottom: 10px; }
