--- a/styles/components/button.scss
+++ b/styles/components/button.scss
@@ -53,17 +53,15 @@
 
   &.-sun { @include btn-variant($brand-sun, $brand-white); }
 
-  &.-inverted {
-    &.-default { @include btn-variant-inverted($brand-gray); }
+  &.-inverted.-default { @include btn-variant-inverted($brand-gray); }
 
-    &.-sky { @include btn-variant-inverted($brand-sky); }
+  &.-inverted.-sky { @include btn-variant-inverted($brand-sky); }
 
-    &.-emerald { @include btn-variant-inverted($brand-emerald); }
+  &.-inverted.-emerald { @include btn-variant-inverted($brand-emerald); }
 
-    &.-sun { @include btn-variant-inverted($brand-sun); }
+  &.-inverted.-sun { @include btn-variant-inverted($brand-sun); }
 
-    &.-crimson { @include btn-variant-inverted($brand-crimson); }
-  }
+  &.-inverted.-crimson { @include btn-variant-inverted($brand-crimson); }
 
   &.-disabled,
   &:disabled,
@@ -75,7 +73,8 @@
 
   &.-block {
     display: block;
-    width: 100%;
+    margin-right: 0 !important;
+    margin-left: 0 !important;
   }
 
   &.-xs {
@@ -127,4 +126,10 @@
     margin-right: 10px;
     margin-left: 10px;
   }
+}
+
+.btn-group {
+  > .btn:last-child:not(:first-child) {
+
+  } 
 }
