--- a/docs/styles/main.scss
+++ b/docs/styles/main.scss
@@ -6,7 +6,16 @@
 @import "footer";
 
 .doc-bottom-space { margin-bottom: 25px; }
-
 .doc-bottom-space-large { margin-bottom: 50px; }
-
 .doc-bottom-space-small { margin-bottom: 10px; }
+
+.doc-block {
+  width: 100%;
+  max-width: 125px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  background: $brand-gray-lt;
+  border: 1px solid $brand-gray;
+  border-radius: $border-radius-base;
+}
