--- a/docs/styles/main.scss
+++ b/docs/styles/main.scss
@@ -8,6 +8,7 @@
 .doc-bottom-space { margin-bottom: 25px; }
 .doc-bottom-space-large { margin-bottom: 50px; }
 .doc-bottom-space-small { margin-bottom: 10px; }
+.doc-allowance { margin-right: 5px; }
 
 .doc-block {
   width: 100%;
