--- a/styles/components/form.scss
+++ b/styles/components/form.scss
@@ -6,6 +6,7 @@
 }
 
 .form-control {
+  display: block;
   width: 100%;
   min-height: 34px;
   padding: 7px 8px;
@@ -42,6 +43,71 @@
   }
 }
 
+// fix issue with <select> padding
 select.form-control {
   height: 34px;
+}
+
+label {
+  width: 100%;
+  display: inline-block;
+}
+
+// form containers
+.form-group {
+  margin-bottom: 20px;
+}
+
+.input-group {
+  position: relative;
+  display: table;
+  border-collapse: separate;
+  width: 100%;
+
+  .form-control:first-child,
+  .addon:first-child {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+
+  .form-control:last-child,
+  .addon:last-child {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+
+  .form-control:not(:first-child):not(:last-child),
+  .input-group-addon:not(:first-child):not(:last-child) {
+    border-radius: 0;
+  }
+
+  .form-control,
+  .addon {
+    display: table-cell;
+  }
+
+  .form-control {
+    z-index: 2;
+    float: left;
+    width: 100%;
+  }
+
+  .addon {
+    z-index: 1;
+    width: 1%;
+    padding: 0 8px;
+    min-height: $form-size;
+    background: $brand-gray-lt;
+    border: 1px solid $brand-gray;
+    border-radius: $border-radius-base;
+    vertical-align: middle;
+  }
+
+  .addon:first-child {
+    border-right: 0;
+  }
+
+  .addon:last-child {
+    border-left: 0;
+  }
 }
