--- a/styles/components/form.scss
+++ b/styles/components/form.scss
@@ -64,35 +64,35 @@ label {
   border-collapse: separate;
   width: 100%;
 
-  .form-control:first-child,
-  .addon:first-child {
+  > .form-control:first-child,
+  > .addon:first-child {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
   }
 
-  .form-control:last-child,
-  .addon:last-child {
+  > .form-control:last-child,
+  > .addon:last-child {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
   }
 
-  .form-control:not(:first-child):not(:last-child),
-  .input-group-addon:not(:first-child):not(:last-child) {
+  > .form-control:not(:first-child):not(:last-child),
+  > .addon:not(:first-child):not(:last-child) {
     border-radius: 0;
   }
 
-  .form-control,
-  .addon {
+  > .form-control,
+  > .addon {
     display: table-cell;
   }
 
-  .form-control {
+  > .form-control {
     z-index: 2;
     float: left;
     width: 100%;
   }
 
-  .addon {
+  > .addon {
     z-index: 1;
     width: 1%;
     padding: 0 8px;
@@ -103,11 +103,11 @@ label {
     vertical-align: middle;
   }
 
-  .addon:first-child {
+  > .addon:first-child {
     border-right: 0;
   }
 
-  .addon:last-child {
+  > .addon:last-child {
     border-left: 0;
   }
 }
