--- a/styles/components/button.scss
+++ b/styles/components/button.scss
@@ -36,30 +36,18 @@
   border-radius: $border-radius-base;
   outline: none; /* remove native outline */
   cursor: pointer;
-
-  /* for &.-hidden modifier */
-  opacity: 1;
-
   transition: 0.1s all;
 
   &.-default { @include btn-variant($brand-gray, $brand-black); }
-
   &.-sky { @include btn-variant($brand-sky, $brand-white); }
-
   &.-emerald { @include btn-variant($brand-emerald, $brand-white); }
-
   &.-crimson { @include btn-variant($brand-crimson, $brand-white); }
-
   &.-sun { @include btn-variant($brand-sun, $brand-white); }
 
   &.-inverted.-default { @include btn-variant-inverted($brand-gray); }
-
   &.-inverted.-sky { @include btn-variant-inverted($brand-sky); }
-
   &.-inverted.-emerald { @include btn-variant-inverted($brand-emerald); }
-
   &.-inverted.-sun { @include btn-variant-inverted($brand-sun); }
-
   &.-inverted.-crimson { @include btn-variant-inverted($brand-crimson); }
 
   &.-disabled,
@@ -72,8 +60,9 @@
 
   &.-block {
     display: block;
-    margin-right: 0 !important;
-    margin-left: 0 !important;
+    width: 100%;
+    margin-right: auto !important;
+    margin-left: auto!important;
   }
 
   &.-xs {
@@ -97,15 +86,8 @@
     line-height: $line-height-base;
   }
 
-  /* for hiding; basic transition */
-  &.-hidden {
-    opacity: 0;
-  }
-
-  // Incline to the top for a little.
-  // Useful for our navs, wizard-footer, etc
-  &.-top {
-    margin-top: -6px;
+  &.-rounded {
+    border-radius: $border-radius-rounded;
   }
 
   &.-disabled,
@@ -128,7 +110,7 @@
 }
 
 .btn-group {
-  > .btn { 
+  > .btn {
     margin-right: 0 !important;
     margin-left: 0 !important;
   }
@@ -143,7 +125,7 @@
     border-bottom-right-radius: 0;
   }
 
-  > .btn:not(:first-child):not(:last-child) { 
+  > .btn:not(:first-child):not(:last-child) {
     border-radius: 0;
-  } 
+  }
 }
