Add -rounded modifier for Button Group.
Improve button docs.
Add rounded button group docs.

--- a/styles/components/button.scss
+++ b/styles/components/button.scss
@@ -110,6 +110,10 @@
 }
 
 .btn-group {
+  &.-rounded > .btn {
+    border-radius: $border-radius-rounded;
+  }
+
   > .btn {
     margin-right: 0 !important;
     margin-left: 0 !important;
