Improve badge styling; rename `*-lg` variable to `*-large`.

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -35,11 +35,11 @@ $border-radius-rounded: 25px;
 
 $form-size: 34px; // basic form height
 $padding-y: 6px !default;
-$padding-y-sm: 5px !default;
-$padding-y-lg: 10px !default;
+$padding-y-small: 5px !default;
+$padding-y-large: 10px !default;
 $padding-x: 12px !default;
-$padding-x-sm: 10px !default;
-$padding-x-lg: 16px !default;
+$padding-x-small: 10px !default;
+$padding-x-large: 16px !default;
 
 $mini: 12px;
 $tiny: 18px;
