Add text alignment utils.

--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -31,3 +31,6 @@
 // Type
 ._text-up { text-transform: uppercase; }
 ._text-low { text-transform: lowercase; }
+._text-left { text-align: left; }
+._text-center { text-align: center; }
+._text-right { text-align: right; }
