Fix inverted buttons having white bg

--- a/styles/components/button.scss
+++ b/styles/components/button.scss
@@ -10,15 +10,15 @@
   }
 }
 
-@mixin btn-variant-inverted($local-color, $local-bg: $brand-white) {
-  color: $local-color;
-  background: $local-bg;
-  border-color: $local-color;
+@mixin btn-variant-inverted($border) {
+  background: transparent;
+  color: $border-color;
+  border-color: $border-color;
 
   &:hover,
   &:focus {
-    color: $local-bg;
-    background: $local-color;
+    color: $brand-white;
+    background: $border-color;
   }
 }
 
