--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -35,6 +35,20 @@
 ._text-center { text-align: center !important; }
 ._text-right { text-align: right !important; }
 
+// Text color variants
+// for deprecations
+.text-sky { color: $brand-sky; }
+.text-crimson { color: $brand-crimson; }
+.text-emerald { color: $brand-emerald; }
+.text-sun { color: $brand-sun; }
+.text-muted { color: $brand-gray-dk; }
+// replacements for the above :D
+._text-sky { color: $brand-sky; }
+._text-crimson { color: $brand-crimson; }
+._text-emerald { color: $brand-emerald; }
+._text-sun { color: $brand-sun; }
+._text-muted { color: $brand-gray-dk; }
+
 // Center block
 .centered, // deprecating in the future
 ._centered { // stays
