added panel primary

--- a/styles/components/panel.scss
+++ b/styles/components/panel.scss
@@ -38,6 +38,10 @@
 		@include panel-variant($brand-gray);
 	}
 
+  &.-primary {
+    @include panel-variant($brand-blue);
+  }
+
 	&.-sky {
 		@include panel-variant($brand-sky);
 	}
