--- a/docs/styles/main.scss
+++ b/docs/styles/main.scss
@@ -1,9 +1,11 @@
+$icon-path: "../../dist/fonts";
 @import "../../styles/main";
 @import "nav";
 @import "swatch";
 @import "type";
 @import "layout";
 @import "footer";
+@import "icons";
 
 .doc-bottom-space { margin-bottom: 25px; }
 .doc-bottom-space-large { margin-bottom: 50px; }
