Add stylesheets (for previous commits).
My b ad.

--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -11,14 +11,15 @@ $brand-neutral-dk: #19273F !default; // a touch of dark blue
 $brand-neutral-dker: #0B121F !default;
 
 // color variations
-$brand-blue: #4684BF !default;
+$brand-primary: #3A569B !default;
+$brand-primary-dk: #283C6F !default;
 // light / neutral colors
 $brand-sky: #52B5E5 !default; // blue
 $brand-emerald: #38D4A9 !default; // primary | gren
 $brand-sun: #FFC05A !default; // yellow
 $brand-crimson: #F05F50 !default; // red
 // dark colors
-$brand-sky-dk: #3A569B !default;
+$brand-sky-dk: #4684BF !default;
 $brand-emerald-dk: #2EAF8B !default;
 $brand-sun-dk: #C99746 !default;
 $brand-crimson-dk: #C85044 !default;
