--- a/styles/base/type.scss
+++ b/styles/base/type.scss
@@ -27,7 +27,7 @@ h6 { font-size: 11px; }
 small { font-size: 90%; }
 
 a {
-  color: $brand-blue;
+  color: $brand-sky-dk;
   text-decoration: none;
 
   &:hover {
