--- a/styles/components/button.scss
+++ b/styles/components/button.scss
@@ -1,7 +1,6 @@
-@mixin btn-variant($local-bg, $local-color) {
+@mixin btn-variant($local-bg, $local-color: $brand-white) {
   color: $local-color;
   background: $local-bg;
-  border-color: $local-bg;
 
   &:hover,
   &:focus {
@@ -39,12 +38,14 @@
   transition: 0.1s all;
 
   &.-default { @include btn-variant($brand-gray, $brand-black); }
-  &.-sky { @include btn-variant($brand-sky, $brand-white); }
-  &.-emerald { @include btn-variant($brand-emerald, $brand-white); }
-  &.-crimson { @include btn-variant($brand-crimson, $brand-white); }
-  &.-sun { @include btn-variant($brand-sun, $brand-white); }
+  &.-primary { @include btn-variant($brand-primary); }
+  &.-sky { @include btn-variant($brand-sky); }
+  &.-emerald { @include btn-variant($brand-emerald); }
+  &.-crimson { @include btn-variant($brand-crimson); }
+  &.-sun { @include btn-variant($brand-sun); }
 
   &.-inverted.-default { @include btn-variant-inverted($brand-gray); }
+  &.-inverted.-primary { @include btn-variant-inverted($brand-primary); }
   &.-inverted.-sky { @include btn-variant-inverted($brand-sky); }
   &.-inverted.-emerald { @include btn-variant-inverted($brand-emerald); }
   &.-inverted.-sun { @include btn-variant-inverted($brand-sun); }
