--- a/styles/components/panel.scss
+++ b/styles/components/panel.scss
@@ -1,17 +1,15 @@
-@mixin panel-variant($bg, $color: $brand-white) {
-	border-color: $bg;
-
+ @mixin panel-variant($bg, $color: $brand-white) {
 	& > .heading {
 		background: $bg;
     color: $color;
 	}
 
   > .body + .body {
-    border-color: $bg;
+    border-color: $brand-gray;
   }
 
 	& > .footer {
-		background: $bg;
+		background: $brand-gray;
     color: $color;
 	}
 }
@@ -19,13 +17,17 @@
 .panel {
   color: $brand-black;
 	background: $brand-white;
-  border: 1px solid;
+  border: 1px solid $brand-gray;
 	border-radius: 5px;
 
   > .heading {
     padding: 10px 15px;
     border-top-left-radius: $border-radius-base;
     border-top-right-radius: $border-radius-base;
+  }
+
+  > .heading > * {
+    margin-bottom: 0; // remove vertical rhythm
   }
 
   > .body {
@@ -47,7 +49,7 @@
 	}
 
   &.-primary {
-    @include panel-variant($brand-blue);
+    @include panel-variant($brand-primary);
   }
 
 	&.-sky {
