Update list-group active menuitem to have default cursor.

--- a/styles/components/list-group.scss
+++ b/styles/components/list-group.scss
@@ -33,6 +33,7 @@
   > .menuitem.-selected {
     font-weight: bold;
     color: $brand-black;
+    cursor: default;
     background-color: $brand-white;
   }
 }
