Add icon utils for slate and alert.

--- a/styles/icons/_icons.scss
+++ b/styles/icons/_icons.scss
@@ -9,7 +9,7 @@
   font-style: normal;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+.icon {
   font-family: "one-icons";
   speak: none;
   font-style: normal;
