Fix margin of icon in Slate.

--- a/styles/components/slate.scss
+++ b/styles/components/slate.scss
@@ -14,6 +14,11 @@
 	}
 
   > .icon:first-child {
+    display: block;
     margin-bottom: $spacer-large;
+  }
+
+  > *:last-child {
+    margin-bottom: 0;
   }
 }
