Add margin for sibling button-buttons for the docs.

--- a/docs/styles/main.scss
+++ b/docs/styles/main.scss
@@ -3,6 +3,7 @@ $icon-path: "../../dist/fonts";
 @import "nav";
 @import "swatch";
 @import "type";
+@import "button";
 @import "layout";
 @import "footer";
 @import "icons";
