--- a/docs/styles/nav.scss
+++ b/docs/styles/nav.scss
@@ -3,7 +3,7 @@
   height: 50px;
   width: 100%;
   line-height: 50px;
-  background: $brand-neutral-dk;
+  background: $brand-sidebar;
   margin-bottom: 25px;
 
   .right {
