--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -7,8 +7,9 @@ $brand-gray-dk: #78828A !default;
 
 $brand-neutral: #647A8A !default; // awkward light blue
 // used for sidebar, darkbg, etc
-$brand-neutral-dk: #19273F !default; // a touch of dark blue
-$brand-neutral-dker: #0B121F !default;
+$brand-sidebar: #19273F !default; // a touch of dark blue
+$brand-sidebar-lt: #19273F !default; // a touch of dark blue
+$brand-sidebar-dk: #0B121F !default;
 
 // color variations
 $brand-primary: #3A569B !default;
