--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -28,6 +28,7 @@ $container-max-widths: (
 ) !default;
 
 // type base
+$font-size-small: 12px !default;
 $font-size-base: 14px !default;
 $line-height-base: 1.7 !default;
 
