Fix $brand-sidebar-dk value.

--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -8,7 +8,7 @@ $brand-gray-dk: #78828A !default;
 $brand-neutral: #647A8A !default; // awkward light blue
 // used for sidebar, darkbg, etc
 $brand-sidebar: #19273F !default; // a touch of dark blue
-$brand-sidebar-lt: #19273F !default; // a touch of dark blue
+$brand-sidebar-lt: #5372C5 !default;
 $brand-sidebar-dk: #0B121F !default;
 
 // color variations
