Add responsive mixins.
Add styling for <code> elements for docs.

--- a/docs/styles/type.scss
+++ b/docs/styles/type.scss
@@ -12,3 +12,10 @@ h3.doc-heading { font-size: 16px; }
 h4.doc-heading { font-size: 14px; }
 h5.doc-heading { font-size: 13px; }
 h6.doc-heading { font-size: 11px; }
+
+code {
+  padding: 1px 3px;
+  background: #CEFFF2;
+  color: #428642;
+  border: 1px solid #A3E2A3;
+}
