Improve labels and badge base sizes.
Uppercase label text.
Decrease label and badge sizes (reset line-height).
Add `label -primary` example in docs.

--- a/styles/components/badge.scss
+++ b/styles/components/badge.scss
@@ -6,13 +6,14 @@
 
 .badge {
   display: inline-block;
-  padding: $padding-y-small $padding-x-small;
-  line-height: 1;
+  // 2px because $font-size-small = 14px - 2px
+  padding: 2px 5px;
+  color: $brand-white;
+  font-size: $font-size-small;
+  font-weight: bold;
+  line-height: 1; // reset
+  background: $brand-gray;
   border-radius: $border-radius-rounded;
-
-  &.-default {
-    @include label-variant($brand-gray);
-  }
 
   &.-primary {
     @include label-variant($brand-primary);
