--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -11,6 +11,7 @@
 @import "base/scaffold";
 
 @import "components/button";
+@import "components/pagination";
 @import "components/alert";
 @import "components/label";
 @import "components/badge";
