--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -23,3 +23,4 @@
 @import "components/dropdown";
 @import "components/tooltip";
 @import "components/slate";
+@import "components/tri-circle-loader";
