--- a/styles/components/pagination.scss
+++ b/styles/components/pagination.scss
@@ -9,6 +9,7 @@
     border-radius: $border-radius-base;
     outline: none; /* remove native outline */
     cursor: pointer;
+    min-width: 80px;
   }
 
   > .action:hover {
